# BankLens

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml  readme.md  test.pkl
.github/workflows/: lint.yml
API/: connect_to_bank.sh  connect_to_banks.sh  get_access_token.sh  get_account_data.sh  get_banks_list.sh  list_accounts.sh  list_banks.sh
clean-repo.git/: config  packed-refs
clean-repo.git/filter-repo/: commit-map  first-changed-commits  ref-map
clean-repo.git/info/: refs
clean-repo.git/objects/info/: commit-graph  packs
clean-repo.git/objects/pack/: pack-d52454132b064ac21e3006d2025140be1e971440.bitmap  pack-d52454132b064ac21e3006d2025140be1e971440.idx
clean-repo.git/refs/remotes/origin/: main
config/: my_banks.json  secret.json
data/banks/: banks.json
processes/: setup.ipynb
secrets/: access_token.json
src/: API_interface.py  api_interface.py  config.py
src/architecture/: account_data.py  accounts.py  balance.py  banks.py  transactions.py  user.py
src/architecture/banks/: banks.py
src/architecture/banks/accounts/: accounts.py
src/architecture/banks/accounts/data/: account_data.py  balance.py  transactions.py
src/architecture/secrets/: secret_handling.py
src/utils/: api.py  navigator.py  serialization.py
