[tool.poetry]
name = "personal-finances"
version = "0.1.0"
description = ""
authors = ["albyscotney <alby.scotney@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = {extras = ["jupyter"], version = "^24.10.0"}
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
